--- a/ANSv4/Catalogo4/_preferencias/PreferenciasFrm.xaml
+++ b/ANSv4/Catalogo4/_preferencias/PreferenciasFrm.xaml
@@ -33,7 +33,7 @@
                         />
                     </StackPanel>
                 </Grid>
-                <TextBlock Height="23" HorizontalAlignment="Left" Margin="10,5,0,0" Name="textBlockHeading" Text="Configuración y Preferencias de la Aplicación:" VerticalAlignment="Top" Width="209"  FontSize="17" FontStretch="ExtraCondensed"/>
+                <TextBlock Height="23" HorizontalAlignment="Left" Margin="10,5,0,0" Name="textBlockHeading" Text="Configuración y Preferencias de la Aplicación:" VerticalAlignment="Top" Width="364"  FontSize="17" FontStretch="ExtraCondensed"/>
                 <!--<StackPanel Name="stack" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1"/>-->
                 <WrapPanel Name="stack" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" />
 
@@ -47,6 +47,7 @@
                     <Button Name="ResetButton" Content="Reset" Width="75" Grid.Column="1" Click="ResetButton_Click_1"/>
                     <Button Name="CancelButton" Content="Cancel" Width="75" Grid.Column="2" Click="CancelButton_Click_1"/>
                 </Grid>
+                <Image HorizontalAlignment="Left" Height="100" Margin="501,33,0,0" Grid.Row="1" VerticalAlignment="Top" Width="100" Source="/Catalogo;component/recursos/logo.jpg"/>
             </Grid>
         </Grid>
     </Border>
