--- a/ANSv4_r1/Catalogo4/mwViajantes.xaml
+++ b/ANSv4_r1/Catalogo4/mwViajantes.xaml
@@ -7,7 +7,7 @@
         Title="Catálogo Dígital de Productos - Auto Náutica Sur s.r.l. - v4.0"                
         WindowStartupLocation="CenterScreen"                
         BorderThickness="0"
-        ResizeMode="CanResize"  AllowsTransparency="False" WindowStyle="None" BorderBrush="#FFFFFF" >
+        ResizeMode="CanResize"  AllowsTransparency="False" WindowStyle="None" BorderBrush="#FFFFFF" Icon="recursos/ans48X48.ico" >
 
     <Border Grid.Row="0" x:Name="LayoutRoot" Background="White" BorderBrush="White" BorderThickness="1"  MouseLeftButtonDown="Title_MouseLeftButtonDown">
         <Grid>
