--- a/ANSv4_r1/Catalogo4/_productos/DetalleImagen.xaml
+++ b/ANSv4_r1/Catalogo4/_productos/DetalleImagen.xaml
@@ -5,7 +5,7 @@
         Title="Detalle de la Imágen - Auto Náutica Sur s.r.l." 
         WindowStartupLocation="CenterScreen"                
         BorderThickness="0"
-        ResizeMode="CanResize"  Icon="../recursos/LOGO-ANS-32X32.ico" AllowsTransparency="False" WindowStyle="None" BorderBrush="#FFFFFF" >
+        ResizeMode="CanResize"  AllowsTransparency="False" WindowStyle="None" BorderBrush="#FFFFFF" Icon="/Catalogo;component/recursos/ans48X48.ico" >
 
     <Border Grid.Row="0" x:Name="LayoutRoot" 
           Background="White" BorderBrush="White" BorderThickness="1"  MouseLeftButtonDown="Title_MouseLeftButtonDown">
