--- a/ANSv4_r1/Catalogo4/_preferencias/PreferenciasFrm.xaml
+++ b/ANSv4_r1/Catalogo4/_preferencias/PreferenciasFrm.xaml
@@ -5,7 +5,7 @@
     Title="Configuración de la Aplicación - Catálogo Dígital de Productos - Auto Náutica Sur s.r.l. - v4.0" 
     WindowStartupLocation="CenterScreen"              
     BorderThickness="0"
-    ResizeMode="CanResize" Icon="../recursos/LOGO-ANS-32X32.ico" AllowsTransparency="False" WindowStyle="None" BorderBrush="#FFFFFF">
+    ResizeMode="CanResize" Icon="../recursos/ans32X32.ico" AllowsTransparency="False" WindowStyle="None" BorderBrush="#FFFFFF">
 
     <Border Grid.Row="0" x:Name="LayoutRoot" 
           Background="White" BorderBrush="White" BorderThickness="1"  MouseLeftButtonDown="Title_MouseLeftButtonDown">
