--- a/ANSv4_r1/Catalogo4/_preferencias/passwordFrm.xaml
+++ b/ANSv4_r1/Catalogo4/_preferencias/passwordFrm.xaml
@@ -12,7 +12,7 @@
             <ColumnDefinition Width="50*"/>
         </Grid.ColumnDefinitions>
         <Label Grid.Row="0" Grid.Column="0" Content="Clave"/>
-        <PasswordBox Grid.Column="1" Grid.Row="0" Height="23" Name="txtPwd"/>
+        <PasswordBox Grid.Column="1" Grid.Row="0" Height="23" Name="txtPwd" Margin="5,0,-5,37"/>
         <Button Content="OK" Grid.Column="0" Grid.Row="1" Name="OKButton" Click="OKButton_Click_1"/>
         <Button Content="Cancel" Grid.Column="1" Grid.Row="1" Name="CancelButton" Click="CancelButton_Click_1"/>
     </Grid>
