--- a/ANSv4_r1/Catalogo4/_preferencias/passwordFrm.xaml
+++ b/ANSv4_r1/Catalogo4/_preferencias/passwordFrm.xaml
@@ -1,19 +1,11 @@
 ﻿<Window x:Class="Catalogo._preferencias.passwordFrm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Ingrese la clave" Height="150" Width="300">
-    <Grid VerticalAlignment="Center">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="60"/>
-            <RowDefinition Height="30"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="50*"/>
-            <ColumnDefinition Width="50*"/>
-        </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.Column="0" Content="Clave"/>
-        <PasswordBox Grid.Column="1" Grid.Row="0" Height="23" Name="txtPwd" Margin="5,0,-5,37"/>
-        <Button Content="OK" Grid.Column="0" Grid.Row="1" Name="OKButton" Click="OKButton_Click_1"/>
-        <Button Content="Cancel" Grid.Column="1" Grid.Row="1" Name="CancelButton" Click="CancelButton_Click_1"/>
+        Title="Ingrese la clave" Height="227" Width="440" WindowStartupLocation="CenterScreen">
+    <Grid>
+        <Label Content="Clave"  RenderTransformOrigin="-1.867,-1" Margin="101,53,274,121"/>
+        <PasswordBox  Name="txtPwd" Margin="187,53,74,121"/>
+        <Button Content="OK"  Name="OKButton" Click="OKButton_Click_1" Margin="220,103,114,71"/>
+        <Button Content="Cancel"   Name="CancelButton" Click="CancelButton_Click_1" Margin="116,103,226,71"/>
     </Grid>
 </Window>
