--- a/ANSv4_r1/Catalogo4/mwViajantes.xaml
+++ b/ANSv4_r1/Catalogo4/mwViajantes.xaml
@@ -1,16 +1,36 @@
 ﻿<Window x:Class="Catalogo.mwViajantes" x:Name="CatalogoMwViajantes"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"
+        xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"        
         xmlns:_productos="clr-namespace:Catalogo._productos"          
         Height="600" Width="1024"
         Title="Catálogo Dígital de Productos - Auto Náutica Sur s.r.l. - v4.0"                
         WindowStartupLocation="CenterScreen"                
         BorderThickness="0"
-        ResizeMode="CanResize"  AllowsTransparency="False" WindowStyle="None" BorderBrush="#FFFFFF" Icon="recursos/ans48X48.ico" >
-
+        ResizeMode="CanResize"  AllowsTransparency="False" WindowStyle="None" BorderBrush="#FFFFFF" Icon="/ans48X48.ico" >
+    <Window.Style>
+        <Style TargetType="Window">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsBusy}" Value="True">
+                    <Setter Property="Cursor" Value="Wait" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Style>
     <Border Grid.Row="0" x:Name="LayoutRoot" Background="White" BorderBrush="White" BorderThickness="1"  MouseLeftButtonDown="Title_MouseLeftButtonDown">
         <Grid>
+            <Grid.Style>
+                <Style TargetType="Grid">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding IsBusy}" Value="True">
+                            <Setter Property="IsHitTestVisible" Value="False" />
+                            <!-- Ensures wait cursor is active everywhere in the window -->
+                            <Setter Property="IsEnabled" Value="False" />
+                            <!-- Makes everything appear disabled -->
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Style>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
@@ -120,10 +140,12 @@
                 </Grid>
             </Grid>
 
-            <ad:DockingManager Name="dockManager" Grid.Row="1" IsAnimationEnabled="False" >
+            <ad:DockingManager Name="dockManager" Grid.Row="1" IsAnimationEnabled="False" 
+              Loaded="OnDockManagerLoaded" 
+              Mouse.MouseDown="dockingManager_MouseDown">
                 <ad:ResizingPanel Orientation="Vertical">
                     <ad:ResizingPanel Orientation="Horizontal">
-                        <ad:DocumentPane Name="dockPane" Loaded="DocumentPane_Loaded_1" ShowHeader="True" SelectedIndex="5" SelectionChanged="DocumentPane_SelectionChanged">
+                        <ad:DocumentPane Name="dockPane" Loaded="DocumentPane_Loaded_1" ShowHeader="True" SelectedIndex="5" SelectionChanged="DocumentPane_SelectionChanged" HorizontalAlignment="Stretch">
 
                             <ad:DocumentContent Name="dcProductos" Title="Productos" IsCloseable="False" IsFloatingAllowed="False" >
                                 <Grid x:Name="grProductos">
@@ -227,22 +249,23 @@
                                     </Grid.RowDefinitions>
                                     <Grid x:Name="xFormVisitasArea" Grid.Row="0" />
                                 </Grid>
-                            </ad:DocumentContent>
-                            
+                            </ad:DocumentContent>                            
                         </ad:DocumentPane>
 
-                        <ad:DockablePane x:Name="rzMenu" ad:ResizingPanel.ResizeWidth="150">
-                            <ad:DockableContent Name="xContentMenu" Title="Menú">
-                                <Menu x:Name="appMenu" Background="White">
-                                    <MenuItem x:Name="mnu_web" Header="Sitio web de ANS" Click="xMenu1_web"/>
-                                    <MenuItem x:Name="mnu_revista" Header="Cartilla del Mes" Click="xMenu1_revista"/>
-                                    <MenuItem x:Name="mnu_apertura" Header="Apertura Cta. Cte." Click="xMenu1_CtaCte"/>
-                                    <MenuItem x:Name="mnu_porcentaje" Header="Porcentajes Líneas"  Click="xMenu1_porcentajeL"/>
-                                    <MenuItem x:Name="mnu_config" Header="Configuración Aplic." Click="xMenu1_AppConfig"/>
-                                </Menu>
+                        <ad:DockablePane x:Name="menuDockablePane" ad:ResizingPanel.ResizeWidth="150">
+                            <ad:DockableContent Name="menuDockableContent" Title="Menú" IsCloseable="False"  DockableStyle="AutoHide">
+                                <StackPanel Width="160">
+                                    <Menu x:Name="appMenu" Background="White">
+                                        <MenuItem x:Name="mnu_web" Header="Sitio web de ANS" Click="xMenu1_web"/>
+                                        <MenuItem x:Name="mnu_revista" Header="Cartilla del Mes" Click="xMenu1_revista"/>
+                                        <MenuItem x:Name="mnu_apertura" Header="Apertura Cta. Cte." Click="xMenu1_CtaCte"/>
+                                        <MenuItem x:Name="mnu_porcentaje" Header="Porcentajes Líneas"  Click="xMenu1_porcentajeL"/>
+                                        <MenuItem x:Name="mnu_config" Header="Configuración Aplic." Click="xMenu1_AppConfig"/>
+                                    </Menu>
+                                </StackPanel>
                             </ad:DockableContent>
                         </ad:DockablePane>
-
+                        
                     </ad:ResizingPanel>
                 </ad:ResizingPanel>
             </ad:DockingManager>
